--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.3",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
     "debug": "^2.2.0",
+    "decay": "^1.0.10",
     "express": "^4.13.4",
     "jade": "^1.11.0",
     "morgan": "^1.7.0",
