--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Thoughts-REST",
-  "version": "0.0.0",
+  "name": "thoughts-rest",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -20,5 +20,18 @@
     "secure-random": "^1.1.1",
     "serve-favicon": "^2.3.0",
     "then-redis": "^2.0.0"
-  }
+  },
+  "description": "This is the express.js REST backend for [Thoughts](https://play.google.com/store/apps/details?id=net.wtako.thoughts&hl=zh_HK), an anonymous \"secret\" sharing Android application.",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Saren-Arterius/thoughts-rest.git"
+  },
+  "author": "Saren",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/Saren-Arterius/thoughts-rest/issues"
+  },
+  "homepage": "https://github.com/Saren-Arterius/thoughts-rest#readme"
 }
